// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <View>
        <View>
          <View>
            <View
              pointerEvents="box-only"
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <Gestures>
            <View
              aspectRatio={1.5}
            >
              <View
                height={350}
                width={525}
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../packages/image/assets/t.png",
                    }
                  }
                />
              </View>
              <Image
                source={
                  Object {
                    "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
                  }
                }
              />
              <Image
                source={
                  Object {
                    "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
                  }
                }
              />
            </View>
          </Gestures>
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    pointerEvents="box-only"
  >
    <View
      aspectRatio={1.5}
    >
      <View
        height={350}
        width={525}
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../packages/image/assets/t.png",
            }
          }
        />
      </View>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <View>
        <View>
          <View>
            <View
              pointerEvents="box-only"
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <Gestures>
            <View
              aspectRatio={1.5}
            >
              <Image
                source={null}
              />
            </View>
          </Gestures>
        </View>
      </View>
    </View>
  </Modal>
  <View
    pointerEvents="box-only"
  >
    <View
      aspectRatio={1.5}
    >
      <Image
        source={null}
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <View>
        <View>
          <View>
            <View
              pointerEvents="box-only"
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <Gestures>
            <View
              aspectRatio={1.5}
            >
              <View
                height={350}
                width={525}
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../packages/image/assets/t.png",
                    }
                  }
                />
              </View>
              <Image
                source={
                  Object {
                    "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                  }
                }
              />
              <Image
                source={
                  Object {
                    "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                  }
                }
              />
            </View>
          </Gestures>
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    pointerEvents="box-only"
  >
    <View
      aspectRatio={1.5}
    >
      <View
        height={350}
        width={525}
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../packages/image/assets/t.png",
            }
          }
        />
      </View>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
          }
        }
      />
    </View>
  </View>
</View>
`;
